Fixed leagues routes and added swagger
